--- a/index.html
+++ b/index.html
@@ -36,5 +36,5 @@
       color: red;
     }
   </style>
-  <script src="index.js"></script>
+  <script type="module" src="index.js"></script>
 </html>
