--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       </ul>
          <div id="app"></div>
       <div id="container-preloader-post"></div>
-      <div class="add-form">
+      <!-- <div class="add-form">
         <input
           type="text"
           class="add-form-name"
@@ -29,7 +29,7 @@
         <div class="add-form-row">
           <button class="add-form-button">Написать</button>
         </div>
-      </div>
+      </div> -->
     </div>
   </body>
   <style>
