--- a/index.html
+++ b/index.html
@@ -7,30 +7,7 @@
   </head>
 
   <body>
-    <div class="container">
-      <div id="container-preloader"></div>
-      <ul class="comments" id="list-comments" >
-        <!-- Список рендерится в JS -->
-      </ul>
-         <div id="app"></div>
-      <div id="container-preloader-post"></div>
-      <!-- <div class="add-form">
-        <input
-          type="text"
-          class="add-form-name"
-          placeholder="Введите ваше имя"
-        />
-        <textarea
-          type="textarea"
-          class="add-form-text"
-          placeholder="Введите ваш коментарий"
-          rows="4"
-        ></textarea>
-        <div class="add-form-row">
-          <button class="add-form-button">Написать</button>
-        </div>
-      </div> -->
-    </div>
+    <div class="container" id="app">Пожалуйста подождите, идет загрузка комментариев...</div>
   </body>
   <style>
     .error::placeholder {
