--- a/index.html
+++ b/index.html
@@ -14,5 +14,6 @@
       color: red;
     }
   </style>
-  <script type="module" src="index.js"></script>
+  <!-- <script type="module" src="index.js"></script> -->
+  <script src="./dist/index.js"></script>
 </html>
